argocd/apps/oauth2-proxy/config/oauth2-proxy-ReferenceGrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-httproute-backends
  namespace: oauth2-proxy
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: monitoring
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: longhorn-system
  to:
    - group: ""
      kind: Service
