argocd/apps/oauth2-proxy/config/oauth2-proxy-HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy
  namespace: traefik
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure-oauth2
  hostnames:
    - oauth2.nss.jkzl.eu
  rules:
    - backendRefs:
        - name: oauth2-proxy
          port: 4180
